main.css
body {
    background-color: #333333;
    color: #ffffd6; 
}

pdn-fen:not(:defined) {
  /* Pre-style, give layout, replicate app-drawer's eventual styles, etc. */
  display: inline-block;
  height: 100vh;
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
}

pdn-fen {
    display: block;
    margin: auto;
    width: 35%;
}

/* Previously pdn-fen */
.board {
    display: block;
    position: relative;
    background-image: url("./assets/board.png");
    background-size: cover;
    aspect-ratio: 1;
    width: 100%;
    border-radius: 5px;
}

/*
.board {
    position: relative;
    background-image: url("./assets/board.png");
    background-size: cover;
    width: 800px;
    height: 800px;
    border-radius: 5px;
}
*/
.pdn-title {
    display: inline-block;
    margin: auto;
    padding: 5px;
    text-align: center;
    font-size: 1.75em;
    width: 75%;
}

.pdn-spacer {
    display: inline-block;
    width: 10%;
}

.pdn-flip {
    margin-left: auto;
    margin-right: 0;
}

.piece {
    position: absolute;
    background-size: cover;
    width: 12.5%;
    height: 12.5%;
}

.rp {
    background-image: url("assets/rp.png");
    transition: transform 0.5s;
    
}

.wp {
    background-image: url("assets/wp.png");
    transition: transform 0.5s;
    
}

.rk {
    background-image: url("assets/rk.png");
    transition: transform 0.5s;
    
}

.wk {
    background-image: url("assets/wk.png");
    transition: transform 0.5s;
}

[class*="square-"] {
    transition: transform 0.5s;
}

[class*="number-overlay-"] {
    position: absolute;
    width: 12.5%;
    height: 12.5%;
    color: #ffffd6; 
    cursor: default;
    font-size: 1vw;
}

.number-overlay-1 {
    transform: translate(102%, 0%);    
}

.number-overlay-2 {
    transform: translate(302%, 0%);
}

.number-overlay-3 {
    transform: translate(502%, 0%);
}

.number-overlay-4 {
    transform: translate(702%, 0%);
}

.number-overlay-5 {
    transform: translate(2%, 100%);
}

.number-overlay-6 {
    transform: translate(202%, 100%);
}

.number-overlay-7 {
    transform: translate(402%, 100%);
}

.number-overlay-8 {
    transform: translate(602%, 100%);
}

.number-overlay-9 {
    transform: translate(102%, 200%);
}

.number-overlay-10 {
    transform: translate(302%, 200%);
}

.number-overlay-11 {
    transform: translate(502%, 200%);
}

.number-overlay-12 {
    transform: translate(702%, 200%);
}

.number-overlay-13 {
    transform: translate(2%, 300%);
}

.number-overlay-14 {
    transform: translate(202%, 300%);
}

.number-overlay-15 {
    transform: translate(402%, 300%);
}

.number-overlay-16 {
    transform: translate(602%, 300%);
}

.number-overlay-17 {
    transform: translate(102%, 400%);
}

.number-overlay-18 {
    transform: translate(302%, 400%);
}

.number-overlay-19 {
    transform: translate(502%, 400%);
}

.number-overlay-20 {
    transform: translate(702%, 400%);
}

.number-overlay-21 {
    transform: translate(2%, 500%);
}

.number-overlay-22 {
    transform: translate(202%, 500%);
}

.number-overlay-23 {
    transform: translate(402%, 500%);
}

.number-overlay-24 {
    transform: translate(602%, 500%);
}

.number-overlay-25 {
    transform: translate(102%, 600%);
}

.number-overlay-26 {
    transform: translate(302%, 600%);
}

.number-overlay-27 {
    transform: translate(502%, 600%);
}

.number-overlay-28 {
    transform: translate(702%, 600%);
}

.number-overlay-29 {
    transform: translate(2%, 700%);
}

.number-overlay-30 {
    transform: translate(202%, 700%);
}

.number-overlay-31 {
    transform: translate(402%, 700%);
}

.number-overlay-32 {
    transform: translate(602%, 700%);
}

.square-1 {
    transform: translate(100%, 0%);
}

.square-2 {
    transform: translate(300%, 0%);
}

.square-3 {
    transform: translate(500%, 0%);
}

.square-4 {
    transform: translate(700%, 0%);
}

.square-5 {
    transform: translate(0%, 100%);
}

.square-6 {
    transform: translate(200%, 100%);
}

.square-7 {
    transform: translate(400%, 100%);
}

.square-8 {
    transform: translate(600%, 100%);
}

.square-9 {
    transform: translate(100%, 200%);
}

.square-10 {
    transform: translate(300%, 200%);
}

.square-11 {
    transform: translate(500%, 200%);
}

.square-12 {
    transform: translate(700%, 200%);
}

.square-13 {
    transform: translate(0%, 300%);
}

.square-14 {
    transform: translate(200%, 300%);
}

.square-15 {
    transform: translate(400%, 300%);
}

.square-16 {
    transform: translate(600%, 300%);
}

.square-17 {
    transform: translate(100%, 400%);
}

.square-18 {
    transform: translate(300%, 400%);
}

.square-19 {
    transform: translate(500%, 400%);
}

.square-20 {
    transform: translate(700%, 400%);
}

.square-21 {
    transform: translate(0%, 500%);
}

.square-22 {
    transform: translate(200%, 500%);
}

.square-23 {
    transform: translate(400%, 500%);
}

.square-24 {
    transform: translate(600%, 500%);
}

.square-25 {
    transform: translate(100%, 600%);
}

.square-26 {
    transform: translate(300%, 600%);
}

.square-27 {
    transform: translate(500%, 600%);
}

.square-28 {
    transform: translate(700%, 600%);
}

.square-29 {
    transform: translate(0%, 700%);
}

.square-30 {
    transform: translate(200%, 700%);
}

.square-31 {
    transform: translate(400%, 700%);
}

.square-32 {
    transform: translate(600%, 700%);
}

